--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@ SEE Graduated
 
         <section class="clients">
 
-          <h3 class="h3 clients-title">Clients</h3>
+          <h3 class="h3 clients-title">Experiances</h3>
 
           <ul class="clients-list has-scrollbar">
 
@@ -474,6 +474,13 @@ SEE Graduated
                 <img src="./assets/images/logo-3-color.png" alt="client logo">
               </a>
             </li>
+
+            <li class="clients-item">
+              <a href="#">
+                <img src="./assets/images/logo-4-color.png" alt="client logo">
+              </a>
+            </li>
+
           </ul>
 
         </section>
