mail to : added

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="tiwaripranit79@gmail.com" class="contact-link">tiwaripranit79@gmail.com</a>
+              <a href="mailto:tiwaripranit79@gmail.com" class="contact-link">tiwaripranit79@gmail.com</a>
             </div>
 
           </li>
@@ -213,7 +213,6 @@
             I enjoy making connections with people and learning from talented creators and artists.
              With Four years of experience in graphic design and over 3 years in web development, I have developed a passion for both fields.
               I also have a fondness for coffee and the color purple.
-SEE Graduated
           </p>
         </section>
 
