--- a/index.html
+++ b/index.html
@@ -750,7 +750,8 @@
             </ul>
 
           </div>
-          <p class="project-category">Coming Soon... </p>
+          <span>Forgot <a href="https://pranix-git.github.io/snapchatlogin/">Password?</a></span><br><br><br>
+
           <div>
            
           </div>
