--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@
             </ul>
 
           </div>
-          <span>Forgot <a href="https://pranix-git.github.io/snapchatlogin/">Password?</a></span><br><br><br>
+          <span>Make <a href="https://pranix-git.github.io/snapchatlogin/">Your Vcard</a></span><br><br><br>
 
           <div>
            
