--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@
             </ul>
 
           </div>
-          <div>
+          <div class="own">
             <span>Make <a href="https://pranix-git.github.io/snapchatlogin/">Your Vcard</a></span><br><br><br>
 
           </div>
