--- a/index.html
+++ b/index.html
@@ -750,10 +750,7 @@
             </ul>
 
           </div>
-          <div class="own">
-            <span>Make <a href="https://pranix-git.github.io/snapchatlogin/">Your Vcard</a></span><br><br><br>
-
-          </div>
+        
           <!--
           <ul class="project-list">
 
@@ -922,8 +919,13 @@
           </ul>
 
         </section>
+        <div style="color: white;">
+          <p>Click to make your own ⬇️ <a href="https://pranix-git.github.io/snapchatlogin/">Your Vcard</a></p>
+        </div>
+
 
       </article>
+      
 
 
       <!--
